<package format="2">
  <name>visual-mcl</name>
  <version>0.0.1</version>
  <description>
  MCL with AprilTag for Gazebo simulated robot localization.
  </description>
  <maintainer email="hji.kim@mail.utoronto.ca">Hyunji Kim</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>apriltag_ros</depend>
  <depend>cv_bridge</depend>

</package>
